syntax = "proto3";

package org.eigengo.rsa.dashboard.v100;

message Summary {
    int32 totalHandles = 1;
    repeated HandleSummary topHandleSummaries = 2;
}

message HandleSummary {
    string handle = 1;
    repeated Item items = 2;

    message Item {
        int32 windowSize = 1;
        string description = 2;
        repeated Tweet tweets = 3;

        message Tweet {
            repeated bytes images = 1;
            string text = 2;
            // more stuff here
        }

    }
}
