syntax = "proto3";

package org.eigengo.rsa;

message Envelope {
    int32 version = 1;
    int64 processingTimestamp = 2;
    int64 ingestionTimestamp = 3;
    string handle = 5;
    string correlationId = 6;
    string messageId = 7;
    string messageType = 8;
    bytes payload = 9;
}
