syntax = "proto3";

package org.eigengo.rsa.identity.v100;

message Identity {

    oneof face {
        IdentifiedFace identifiedFace = 1;
        UnknownFace unknownFace = 2;
    }

    message IdentifiedFace {
        string name = 1;
        double score = 2;
    }

    message UnknownFace {
    }

}
